<resources>
    <string name="app_name">Memory Game</string>
    <string name="grid_1">Grid 1</string>
    <string name="grid_2">Grid 2</string>
    <string name="grid_3">Grid 3</string>
    <string name="grid_4">Grid 4</string>
    <string name="grid_5">Grid 5</string>
    <string name="grid_6">Grid 6</string>
    <string name="grid_7">Grid 7</string>
    <string name="grid_8">Grid 8</string>
    <string name="grid_9">Grid 9</string>
    <string name="grid_12">Grid 12</string>
    <string name="grid_11">Grid 11</string>
    <string name="grid_10">Grid 10</string>
    <string name="timer_text">Timer</string>
    <string name="current_score">Score</string>
    <string name="highest_score">Best score</string>
    <string name="restart_score">200</string>
    <string name="global_score">Global score</string>
    <string name="memory_game_button">Memory Game</string>
    <string name="sequence_game_button">Sequence Game</string>
    <string name="number_of_squares">Number of squares:</string>
    <string name="play_button">Play button</string>
    <string name="share_text">Hey!\nMy global score in \'Memory Games\' is %1$s.\n\nTry to beat my score and show me ;)</string>
    <string name="clear_memory_game_score">Clear Memory game score</string>
    <string name="clear_sequence_game_score">Clear Sequence game score</string>
    <string name="clear_all_scores">Clear all scores</string>
    <string name="button">MEMORY GAME</string>
</resources>